fix: clip the overflow on mobile screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -246,6 +246,10 @@
 /* Scrollbar */
 html,
 body {
+  max-width: 100%;
+  overflow-x: hidden;
+  overflow-x: clip;
+  overscroll-behavior-x: none;
   -ms-overflow-style: none;
   scrollbar-width: none;
   scroll-behavior: smooth;
